--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    discovery.3scale.net/port: '8443'
-    discovery.3scale.net/scheme: https
+    discovery.3scale.net/port: '8080'
+    discovery.3scale.net/scheme: http
     openshift.io/generated-by: OpenShiftWebConsole
   creationTimestamp: "2022-09-07T10:55:39Z"
   labels:
