service 3scale able

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,7 +7,7 @@ metadata:
     openshift.io/generated-by: OpenShiftWebConsole
   creationTimestamp: "2022-09-07T10:55:39Z"
   labels:
-    discovery.3scale.net: 'true'
+    discovery.3scale.net: 'true' # 3Scale
     app: quinoa-wind-turbine
     app.kubernetes.io/component: quinoa-wind-turbine
     app.kubernetes.io/instance: quinoa-wind-turbine
