--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -15,7 +15,7 @@ metadata:
     app.kubernetes.io/name: quinoa-wind-turbine
     app.kubernetes.io/part-of: wind-turbine
     app.openshift.io/runtime-version: 1.0.0
-  name: quinoa-wind-turbine
+  name: svc
 spec:
   ports:
   - name: 8080-tcp
