--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
 - deployment.yaml
 - service.yaml
 - route.yaml
+- infinispan.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
