--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,13 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    discovery.3scale.net/port: '8080'
-    discovery.3scale.net/scheme: http
     openshift.io/generated-by: OpenShiftWebConsole
+    kubernetes.io/tls-acme: "true"
   creationTimestamp: "2022-09-07T10:55:39Z"
   labels:
-    discovery.3scale.net: 'true'
-    mock.label.test: mock
     app: quinoa-wind-turbine
     app.kubernetes.io/component: quinoa-wind-turbine
     app.kubernetes.io/instance: quinoa-wind-turbine
