--- a/k8s/infinispan.yaml
+++ b/k8s/infinispan.yaml
@@ -7,7 +7,7 @@ metadata:
     openshift.io/display-name: Infinispan Cluster	
     openshift.io/documentation-url: 'http://infinispan.org/documentation/'	
   labels:	
-    app.kubernetes.io/instance: wind-turbine	
+    app.kubernetes.io/instance: wind-turbine-prd	
     app.kubernetes.io/managed-by: Helm	
     app.kubernetes.io/part-of: wind-turbine	
     app.kubernetes.io/version: '14.0'	
